--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ deploy:
   provider: elasticbeanstalk
   region: "ap-southeast-1"
   app: "docker-react"
-  env: "docker-react-env"
+  env: "DockerReact-env"
   bucket_name: "travis-test-ci"
   bucket_path: "dockertest"
   on:
