Updated the bucket name and path

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ deploy:
   region: "ap-southeast-1"
   app: "docker-react"
   env: "DockerReact-env"
-  bucket_name: "travis-test-ci"
-  bucket_path: "dockertest"
+  bucket_name: "elasticbeanstalk-ap-southeast-1-390648466963"
+  bucket_path: "docker-react"
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
